--- a/style.css
+++ b/style.css
@@ -2,8 +2,33 @@
     Folha de estilo do site one page HTML5 e CSS3
     @author Professor José de Assis
 
-*/
+Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
-body{
-    background-color: #FF0000;
+
+/*Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+@media (min-width: 576px){
+    body{
+        background-color:#0ff;
+    }
 }
+/*Tablet Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+@media (min-width:768px){
+    body{
+        background-color: #ffff00;
+    }
+}
+/*Tablet Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+@media(min-width:992px){
+    body{
+        background-color:#ff6600;
+    }
+}
+/*PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+@media(min-width:1200px){
+    Body{
+        background-color: #F00;
+    }
+}
+
+
