--- a/style.css
+++ b/style.css
@@ -1,41 +1,88 @@
 /*
     Folha de estilo do site one page HTML5 e CSS3
     @author Professor José de Assis
-    */
 
-/*CSS Reset*/
-/*Importação Google Fontes*/
+*/
 
+/* Importação (Google Fontes) */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-
-*{
-    margin:0;
+/* CSS Reset */
+* {
+    margin: 0;
     border: 0;
     padding: 0;
 }
 
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
 }
 
-/*Layout*/
+/* Layout */
 
 .Container{
     margin: 0 auto;
-    background-color: #77ff00;
+}
+.Flex {
+    display:flex;
+    justify-content: space-between;
 }
 
+/*topo do site*/
+
+#topo{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+}
 
 /*Smartphone Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+/*Cabeçalho*/
+header{
+    height:60px ;
+}
 
+#logo img{
+    width: 128px;
+    height: 128px;
+}
+
+#check {
+    display: none;
+}
+
+label {
+    font-size: 3em;
+    padding-right: 15px;
+}
+
+nav ul{
+    list-style: none;
+    background-color: #343538;
+    height: 100vh;
+    position: fixed;
+    top: 60px;
+    right: -100%;
+    width: 100%;
+    transition: all 0.5s;
+}
+
+#check:checked ~ ul {
+    right: 0;
+}
+
+nav ul li{
+    padding: 20px;
+    border-bottom: 1px solid #a9a9a9 ;
+}
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+}
 
 /*Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
-@media (min-width: 576px){
-    body{
-        background-color:#0ff;
-    }
+@media (min-width: 576px) {
     /*Layout*/
     .Container{
         max-width: 540px;
@@ -43,9 +90,7 @@ body{
 }
 /*Tablet Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width:768px){
-    body{
-        background-color: #ffff00;
-    }
+   
      /*Layout*/
      .Container{
         max-width: 720px;
@@ -53,9 +98,7 @@ body{
 }
 /*Tablet Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media(min-width:992px){
-    body{
-        background-color:#ff6600;
-    }
+    
      /*Layout*/
      .Container{
         max-width: 960px;
@@ -64,12 +107,40 @@ body{
 /*PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 @media(min-width:1200px){
-    Body{
-        background-color: #F00;
-    }
+    
      /*Layout*/
-     .Container{
+     .Container {
         max-width: 1140px;
+    }
+    /*Cabeçalho*/
+    header{
+        height:120px ;
+    }
+    
+    #logo img {
+        margin-top: 30px;
+        width: 189px;
+        height: 189px;
+    }
+    label {
+        display: none;
+    }
+
+    nav ul{
+        position: static;
+        height: auto;
+        background-color: transparent;
+        margin-top: 50px;
+    }
+    nav ul li{
+        float: left;
+        border: 0;
+    }
+    nav ul li a{
+        color: #343538;
+    }
+    nav ul li a:hover{
+        color:#C00000
     }
 }
 
