--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ body {
     display:flex;
     justify-content: space-between;
 }
+.Botao{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.3em;
+    font-weight: 700;
+    background-color: #c00000;
+    padding: 10px 40px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+}
 
 /*topo do site*/
 
@@ -80,12 +90,37 @@ nav ul li a{
     text-decoration: none;
     color: #fff;
 }
+/* Destaque */
+main {
+    height: 75vh;
+    background: url(img/banner.jpg);
+    background-size:cover;
+    color:#ffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+main h1{
+    font-size: 2.5em;
+}
+
+main h2{
+    font-size: 1em;
+    margin: 20px 0px 50px 0px;
+}
+
 
 /*Smartphone Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media (min-width: 576px) {
     /*Layout*/
     .Container{
         max-width: 540px;
+    }
+    /* Destaque */
+    main h1, main h2{
+        text-shadow: #000 0.05em 0.05em 0.05em;
     }
 }
 /*Tablet Portrait >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
@@ -95,6 +130,16 @@ nav ul li a{
      .Container{
         max-width: 720px;
     }
+    /* Destaque */
+    main {
+        height: 45vh;
+    }
+    main h1{
+        font-size: 5.5em;
+    }
+    main h2{
+        font-size: 2em;
+    }
 }
 /*Tablet Landscape >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 @media(min-width:992px){
@@ -102,6 +147,10 @@ nav ul li a{
      /*Layout*/
      .Container{
         max-width: 960px;
+    }
+    /* Detaque */
+    main{
+        height: 70vh;
     }
 }
 /*PC >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
