--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
     display:flex;
     justify-content: space-between;
 }
+
+.Flex2{
+    display: flex;
+    align-items: center;
+}
 .Botao {
     text-decoration: none;
     color: #fff;
@@ -95,6 +100,7 @@ main {
     height: 75vh;
     background: url(img/banner.jpg);
     background-size:cover;
+    background-position: center;
     color:#ffff;
     display: flex;
     flex-direction: column;
@@ -115,6 +121,29 @@ main h2 {
 
 #sobre {
     padding: 50px 0px;
+    background: url(img/background.png);
+    background-size: cover;
+    background-position: center;
+}
+
+#destaqueSobre{
+    display: none;
+}
+#textoSobre{
+    color: #fff;
+    padding: 0px 10px;
+}
+
+#testoSobre h2{
+    margin-bottom: 10px;
+}
+
+.TopicosSobre{
+    margin-top: 20px;
+}
+
+.TopicosSobre img{
+    margin-right: 10px;
 }
 
 
@@ -196,6 +225,19 @@ main h2 {
     }
     nav ul li a:hover {
         color:#C00000
+    }
+
+    /* Sobre */
+    #sobre{
+        background-attachment: fixed;
+    }
+
+    #destaqueSobre{
+        display: inline;
+    }
+    #destaqueSobre img{
+        border-radius: 50%;
+        margin-right: 50px;
     }
 }
 
